# BoolCache

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/boolcache/: Cargo.toml
crates/boolcache-server/: Cargo.toml
crates/boolcache-server/src/: connection.rs  main.rs  resp.rs  server.rs
crates/boolcache-server/src/replication/: replica.rs
crates/boolcache/src/: db.rs  error.rs  lib.rs  store.rs  types.rs
crates/boolcache/src/commands/: hash.rs  list.rs  mod.rs  set.rs  string.rs  zset.rs
crates/boolcache/src/persistence/: aof.rs  mod.rs  rdb.rs
crates/boolcache/src/replication/: state.rs
docs/: replication.md
