[workspace]
members = [
    "crates/boolcache",
    "crates/boolcache-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BoolCache Contributors"]
license = "MIT"

[workspace.dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
ordered-float = { version = "4", features = ["serde"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
