[package]
name = "boolcache"
version.workspace = true
edition.workspace = true
description = "A Redis-like in-memory cache engine with AOF+RDB persistence"

[dependencies]
bytes.workspace = true
serde.workspace = true
bincode.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
